[tool.poetry]
name = "JceStruct"
version = "0.1.5"
description = "JCE Encode/Decode"
authors = ["yanyongyu <yanyongyu_1@126.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yanyongyu/JceStruct"
repository = "https://github.com/yanyongyu/JceStruct"
documentation = "https://github.com/yanyongyu/JceStruct#readme"
keywords = ["jce"]
packages = [
    { include = "jce" }
]
include = ["jce/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.1"
typing-extensions = ">=3.7.4,<5.0.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.7b0"

# [[tool.poetry.source]]
# name = "aliyun"
# url = "https://mirrors.aliyun.com/pypi/simple/"
# default = true

[tool.black]
line-length = 80
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 80
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = "typing_extensions"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
